Closed Bug 265441 Opened 21 years ago Closed 18 years ago

GetDiskSpaceAvailable returned: -623808512 bytes

Categories

(MailNews Core :: Networking: POP, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: mmokrejs, Assigned: timeless)

Details

Attachments

(1 file)

User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; X11; Linux i686) Opera 7.54 [en] Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a5) Gecko/20041021 Hi, I haven't noticed this bug few days ago in cvs, I think 13.10. was my pre-last checkout. NOw with today's snapshot I have this when trying to fetch new mail via pop3. The first attempt got aborted by itself, as the network was overloaded. Then came in some emails and I wrote one and sent it. At the last one email came in. JUst to explain what you'll see below. Am on linux 2.4.9-bk4, reiserfs 3.6. ++WEBSHELL == 12 ++DOMWINDOW == 14 --DOMWINDOW == 13 --WEBSHELL == 11 Begin mail message delivery. GetDiskSpaceAvailable returned: -623091712 bytes Incorporate message begin: uidl string: 1098363428.30664.ribosome,S=2677 --DOMWINDOW == 12 Incorporate message abort. Abort mail message delivery. Abort mail message delivery. WARNING: GetDefaultCharsetForLocale: need to add multi locale support, file nsUNIXCharset.cpp, line 189 ++WEBSHELL == 12 ++DOMWINDOW == 13 ++WEBSHELL == 13 ++DOMWINDOW == 14 WARNING: the property mailnews.reply_header_authorwrote already exists , file nsPersistentProperties.cpp, line 282 Begin mail message delivery. Begin mail message delivery. Abort mail message delivery. GetDiskSpaceAvailable returned: -623808512 bytes Incorporate message begin: uidl string: 1098363428.30664.ribosome,S=2677 Incorporate message complete. Incorporate message begin: uidl string: 1098363894.30866.ribosome,S=1855 Incorporate message complete. Incorporate message begin: uidl string: 1098364421.31069.ribosome,S=3132 Incorporate message complete. Incorporate message begin: uidl string: 1098364731.31197.ribosome,S=2366 Incorporate message complete. Incorporate message begin: uidl string: 1098364794.31235.ribosome,S=1179 Incorporate message complete. End mail message delivery. WARNING: GetDefaultCharsetForLocale: need to add multi locale support, file nsUNIXCharset.cpp, line 189 WARNING: GetDefaultCharsetForLocale: need to add multi locale support, file nsUNIXCharset.cpp, line 189 WARNING: GetDefaultCharsetForLocale: need to add multi locale support, file nsUNIXCharset.cpp, line 189 WARNING: GetDefaultCharsetForLocale: need to add multi locale support, file nsUNIXCharset.cpp, line 189 WARNING: GetDefaultCharsetForLocale: need to add multi locale support, file nsUNIXCharset.cpp, line 189 SendMessage from XUL GenericSendMessage from XUL Identity = [nsIMsgIdentity: id3] we don't handle eBorderStyle_close yet... please fix me ++WEBSHELL == 14 ++DOMWINDOW == 15 ###!!! ASSERTION: output_carryoverlen must be > 0: 'output_carryoverlen > 0', file comi18n.cpp, line 192 Break: at file comi18n.cpp, line 192 Trying to position a sizeless window; caller should have called sizeToContent() or sizeTo(). See bug 75649. we don't handle eBorderStyle_close yet... please fix me ++WEBSHELL == 15 ++DOMWINDOW == 16 --WEBSHELL == 14 Message Delivery SUCCEEDED! nsMsgComposeSendListener: Success on the message send operation! CopyListener::OnStartCopy() nsMsgComposeSendListener::OnStartCopy() CopyListener: SUCCESSFUL ON THE COPY OPERATION! --WEBSHELL == 13 nsMsgComposeSendListener: Success on the message copy operation! ComposeUnload from XUL --WEBSHELL == 12 WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(EnsureScriptEnvironment())) failed, file nsWebShell.cpp, line 290 WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(EnsureScriptEnvironment())) failed, file nsWebShell.cpp, line 290 --DOMWINDOW == 15 THE CLEANUP ROUTINE FOR nsMsgComposeAndSend() WAS CALLED --DOMWINDOW == 14 --WEBSHELL == 11 --DOMWINDOW == 13 Begin mail message delivery. Abort mail message delivery. Begin mail message delivery. Abort mail message delivery. Begin mail message delivery. Abort mail message delivery. Begin mail message delivery. GetDiskSpaceAvailable returned: -624009216 bytes Incorporate message begin: uidl string: 1098365598.31555.ribosome,S=3130 Incorporate message complete. End mail message delivery. Reproducible: Always Steps to Reproduce: 1. 2. 3.
You didn't apply any system updates in that timeframe?
No system updates since. The mozilla cvs I had was: checkout finish: Wed Oct 13 17:20:54 CEST 2004 In principle I can figure out the cvs options to downgrade back to that date and rebuild on same system. Just let me know if you want.
please use some common sense when reporting bugs, if the problem happens when you use mailnews, then perhaps it's a bug in mailnews. but more importantly, use lxr: http://lxr.mozilla.org/seamonkey/search?string=GetDiskSpaceAvailable+returne the string clearly lives in pop3. to whomever may work on this bug: don't presume that PRInt64 is a long long, perhaps it's a structure which you can't printf("%d").
Assignee: general → sspitzer
Component: Browser-General → Networking: POP
Product: Browser → MailNews
QA Contact: general
<timeless@bemail.org>: 209.132.220.133 does not like recipient. Remote host said: 550 5.1.1 <timeless@bemail.org>... Addressee unknown Giving up on 209.132.220.133. --- Below this line is a copy of the message. Hi Timeless, I'm sorry to drive you angry. Of course I did try to figure out component name, how I'm just a user. I'd look for component like browser, mailer etc. There's just nothing similar to mailer: https://bugzilla.mozilla.org/describecomponents.cgi?product=Browser doesn't make it clear either. This http://lxr.mozilla.org/seamonkey/search?string= I see for the first time. Great, but still, how can I figure out which component is it? See, you have added Networking: POP and |MailNews. How am I supposed to do the same? I just don't see any "Networking" nor "MailNews" at https://bugzilla.mozilla.org/enter_bug.cgi?product=Browser within Component section. I always try search. Often I don't get a hit, same like the leak detector problem. I simply did search for the error message. No hits. Anyway, I do appreaciate your work and of other, sure. Thanks and kind regards Martin
Product: MailNews → Core
OK, the bug is eithe rfixed or it was really a system (libc?) bug. It doesn't happen for me now, at least with Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a6) Gecko/20050108 on the same machine. Unfortunately, have done recently system update and also mozilla update, so cannot say what has helped.
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago
Resolution: --- → INVALID
No, it does appear still using today's cvs snapshot, for example: GetDiskSpaceAvailable returned: -1569017856 bytes Happens with: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a6) Gecko/20050115 on Gentoo Linux. I definitely haven't upgraded libc since my last response, so it cannot be the issue (I mean if so, then I have still buggy version of libc -- 2.3.4.20040808-r1).
Status: RESOLVED → UNCONFIRMED
Resolution: INVALID → ---
This is an automated message, with ID "auto-resolve01". This bug has had no comments for a long time. Statistically, we have found that bug reports that have not been confirmed by a second user after three months are highly unlikely to be the source of a fix to the code. While your input is very important to us, our resources are limited and so we are asking for your help in focussing our efforts. If you can still reproduce this problem in the latest version of the product (see below for how to obtain a copy) or, for feature requests, if it's not present in the latest version and you still believe we should implement it, please visit the URL of this bug (given at the top of this mail) and add a comment to that effect, giving more reproduction information if you have it. If it is not a problem any longer, you need take no action. If this bug is not changed in any way in the next two weeks, it will be automatically resolved. Thank you for your help in this matter. The latest beta releases can be obtained from: Firefox: http://www.mozilla.org/projects/firefox/ Thunderbird: http://www.mozilla.org/products/thunderbird/releases/1.5beta1.html Seamonkey: http://www.mozilla.org/projects/seamonkey/
This bug has been automatically resolved after a period of inactivity (see above comment). If anyone thinks this is incorrect, they should feel free to reopen it.
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago20 years ago
Resolution: --- → EXPIRED
Sorry for the delays. The bug is still present. I observe it during the last year. It is somewhat weird. While running running the mailer for several days without quitting the application, I see sometimes a meaningful number is shown and sometimes not. Maybe some buffer is overflowing time to time? Definitely, confirming with mozilla-source-2005110105-trunk.tar.bz2 on linux 2.6.14, gcc-3.4.4, glibc-2.3.5-r3 (Gentoo linux). Begin mail message delivery. Abort mail message delivery. Begin mail message delivery. GetDiskSpaceAvailable returned: -671490048 bytes Incorporate message begin: uidl string: 1130925089.11424.ribosome,S=1668 Incorporate message complete. End mail message delivery.
Status: RESOLVED → UNCONFIRMED
Resolution: EXPIRED → ---
Yeah mostly that's a problem with printf and trying to get this debug output working cross-platform. Confirming with a CVS trunk build on Win2k, compiler is MS VC6.
Assignee: sspitzer → nobody
Status: UNCONFIRMED → NEW
Ever confirmed: true
Still present in 1.7.13 on Gentoo linux 2.6.17-rc1 with gcc-3.4.6, glibc-2.4-r1: Begin mail message delivery. GetDiskSpaceAvailable returned: -241590272 bytes Incorporate message begin: uidl string: 1145565558.3236.ribosome,S=3413 Incorporate message complete. End mail message delivery.
I see this problem with negative numbers still with cvs HEAD as of few days ago ... just in case would think it is obsolette. ;) $ emerge --info Portage 2.1.2-r5 (default-linux/x86/2006.0, gcc-4.1.1, glibc-2.5-r0, 2.6.19.2 i686) ================================================================= System uname: 2.6.19.2 i686 Mobile Intel(R) Pentium(R) 4 - M CPU 1.80GHz Gentoo Base System release 1.12.9 Timestamp of tree: Mon, 29 Jan 2007 13:00:01 +0000 dev-java/java-config: 1.3.7, 2.0.31-r3 dev-lang/python: 2.3.6, 2.4.4 dev-python/pycrypto: 2.0.1-r5 sys-apps/sandbox: 1.2.18.1 sys-devel/autoconf: 2.13, 2.61 sys-devel/automake: 1.4_p6, 1.5, 1.6.3, 1.7.9-r1, 1.8.5-r3, 1.9.6-r2, 1.10 sys-devel/binutils: 2.17 sys-devel/gcc-config: 1.3.14 sys-devel/libtool: 1.5.22 virtual/os-headers: 2.6.19.2-r2 ACCEPT_KEYWORDS="x86 ~x86" AUTOCLEAN="yes" CBUILD="i686-pc-linux-gnu" CFLAGS="-O2 -march=pentium4 -mmmx -msse -msse2 -fomit-frame-pointer -pipe" CHOST="i686-pc-linux-gnu" CONFIG_PROTECT="/etc /usr/share/X11/xkb /usr/share/config /usr/spool/PBS /var/bind /var/qmail/alias /var/qmail/control /var/vpopmail/domains /var/vpopmail/etc" CONFIG_PROTECT_MASK="/etc/env.d /etc/env.d/java/ /etc/gconf /etc/java-config/vms/ /etc/revdep-rebuild /etc/terminfo /etc/texmf/web2c" CXXFLAGS="-O2 -march=pentium4 -mmmx -msse -msse2 -fomit-frame-pointer -pipe" ...
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #305302 - Flags: review?(bienvenu)
Comment on attachment 305302 [details] [diff] [review] (untested, but presumably correct patch) try to fix debug output seems to work fine. I'll just land this, since it's debug code anyway...thx, timeless.
Attachment #305302 - Flags: review?(bienvenu) → review+
since the tree is closed, and I'll forget to check this in, adding checkin-needed
Keywords: checkin-needed
Comment on attachment 305302 [details] [diff] [review] (untested, but presumably correct patch) try to fix debug output mozilla/mailnews/local/src/nsPop3Protocol.cpp 1.273
Status: ASSIGNED → RESOLVED
Closed: 20 years ago18 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Keywords: checkin-needed
Seems to be correct now: GetDiskSpaceAvailable returned: 10243801088 bytes $ df -h Filesystem Size Used Avail Use% Mounted on rootfs 137G 121G 9.6G 93% / ...
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: