Bug 265441 GetDiskSpaceAvailable returned: -623808512 bytes r=bienvenu